# image-convert-mcp

./: AGENT_GUIDE.md  API.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  Procfile  README.md  entrypoint.sh  mcp.json  mcp_config_example.json  mcp_server.py  mkdocs.yml  pyproject.toml  requirements.txt  test_mcp_server.py  vercel.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
api/: index.py
docs/: cli.md  contributing.md  examples.md  index.md
docs/api/: core.md  presets.md  stats.md
docs/getting-started/: installation.md  quickstart.md
docs/mcp/: configuration.md  tools.md
image_convert_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: __init__.py  cli.py  core.py  presets.py  stats.py  validation.py
tests/: __init__.py  test_core.py  test_presets.py  test_stats.py  test_validation.py
