[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "image-convert-mcp"
version = "0.2.0"
description = "A Model Context Protocol server for image format conversion"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Dinesh Puthiyedath"}
]
dependencies = [
    "mcp>=1.0.0",
    "pillow>=10.0.0",
    "pillow-avif-plugin>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools]
py-modules = ["mcp_server"]
